[package]
name = "helloworld"
version = "0.1.0"
authors = ["Chetan Mistry <cmistry98@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "helloworld"

[dependencies]
piston = "0.49.0"
piston2d-graphics = "0.35.0"
pistoncore-glutin_window = "0.63.0"
piston2d-opengl_graphics = "0.69.0"
piston_window = "0.105.0"
find_folder = "0.3.0"
gfx = "0.18.2"
